# mangle_web_engine

./: .gitignore  Cargo.toml  Cross.toml  README.md  Rocket.toml
.devcontainer/: Dockerfile
docker/: Dockerfile  Rocket.toml  bashrc_append
docker_ws/: Dockerfile
src/: configs.rs  main.rs  mdrender.rs  parsing.rs  singletons.rs  ws.rs
src/apps/: mod.rs
src/apps/auth/: mod.rs  singletons.rs
src/apps/blog/: mod.rs
src/apps/bola/: mod.rs
src/methods/: auth.rs  getters.rs  mod.rs  setters.rs
