[package]
name = "mangle-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mangle-detached-console = { git = "https://github.com/manglemix/mangle_detached_console.git" }
mangle-rust-utils = { git = "https://github.com/manglemix/mangle_rust_utils.git" }
rand = { version = "0.8.5" , features = ["std_rng"] }
rust-argon2 = "1.0.0"
rocket = { version = "0.5.0-rc.2" , features = ["json"]}
# async-trait = "0.1.56"
# simple-serde = { git = "https://github.com/manglemix/simple_serde.git" , features = ["text", "bin"]}
rocket_async_compression = "0.1.1"
simple-logger = { git = "https://github.com/manglemix/simple_logger.git" }
regex = "1.6.0"
clap = "4.0.22"
once_cell = "1.16.0"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
bimap = "0.6.2"
tokio-tungstenite = "0.18.0"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_sqlite"]